...
              loading={carregando}
              variant="secondary"
            />
          ) : null}

          <Link href="/register" style={styles.linkCadastro} onPress={() => Keyboard.dismiss()}>
            Criar conta de participante
          </Link>
        </CartaoLeilao>
      </KeyboardAwareScrollView>
    </SafeAreaView>
  );
}
...
