appId: host.exp.exponent
---
- launchApp
- tapOn: "Enter URL manually"
- tapOn: "exp://"
- inputText: "exp://tcvey0y-anonymous-8081.exp.direct"
- tapOn: "Connect"
- extendedWaitUntil:
    visible: "This is the developer menu. It gives you access to useful tools in Expo Go."
    timeout: 10000
- tapOn:
    point: 4%,47%
- tapOn: ", Arrematados"
- tapOn: "Pagar item"
- tapOn: "Confirmar pagamento"
- tapOn: "OK"
- tapOn: "Endereço completo"
- inputText: "rua das floras, número 444"
- hideKeyboard
- tapOn: "Complemento"
- inputText: "casa azul"
- hideKeyboard
- tapOn: "Confirmar endereço de entrega"
- tapOn: "OK"
- tapOn: "Fechar"
