appId: host.exp.exponent
---
- launchApp:
    clearState: true
- tapOn: "Enter URL manually"
- tapOn: "exp://"
- inputText: "exp://tcvey0y-anonymous-8081.exp.direct"
- tapOn: "Connect"
- extendedWaitUntil:
    visible: "This is the developer menu. It gives you access to useful tools in Expo Go."
    timeout: 10000
- tapOn:
    point: 4%,47%
- tapOn: "Criar conta de participante"
- tapOn: "Seu nome"
- inputText: "Gabriel"
- hideKeyboard
- tapOn: "Seu sobrenome"
- inputText: "Arruda"
- hideKeyboard
- tapOn: "Somente números"
- inputText: "12345678910"
- hideKeyboard
- tapOn: "seuemail@dominio.com"
- inputText: "gabriel.teste1@teste.com"
- hideKeyboard
- scrollUntilVisible:
    element:
      text: "Finalizar cadastro"
- tapOn: "Seu telefone"
- inputText: "21999999999"
- hideKeyboard
- tapOn: "DD/MM/AAAA"
- tapOn: "1"
- tapOn: "OK"
- tapOn: "Crie uma senha"
- inputText: "123456"
- hideKeyboard
- tapOn: "Repita a sua senha"
- inputText: "123456"
- hideKeyboard
- tapOn: "Finalizar cadastro"